--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -27,6 +27,11 @@ button{
 h1, h2, h3, h4, h5, h6, p, a,button{
     font-family: inherit;
 }
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 // dark mode
 .dark{
     @include theme-background-color('dark');
