--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -2,9 +2,10 @@
 header{
     @include center-content-vertical;
     padding-top: 3.9375rem;
-
+    justify-content: space-between;
+// dark mode part
     .darkMode{
-        @include center-content-horizontal;
+        @include center-content-vertical;
         flex-direction: column;
 
         & .darkModBtn{
@@ -19,6 +20,7 @@ header{
             border: 1px solid #000;
             padding-inline: .6188rem .8125rem;
             padding-block: .3125rem .2256rem;
+            margin-bottom: .375rem;
 
             & .elipse{
                 width: 1.875rem;
@@ -27,6 +29,76 @@ header{
                 background-color: #111;
                 display: inline-block;
             }
-}
+}     
+
+        & .DarkModeTitle{
+            font-size: 1.125rem;
+            font-weight: 800;
+        }
     }
+    // search bar part
+    .search{
+        max-width: 803px;
+        width: 100%;
+        height: 62px;
+        padding-inline: 33px 80px;
+        border: 1px solid #000;
+        border-radius: 2.5rem;
+        -webkit-border-radius: 2.5rem;
+        -moz-border-radius: 2.5rem;
+        -ms-border-radius: 2.5rem;
+        -o-border-radius: 2.5rem;
+        box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
+        background: #D9D9D9;
+        @include center-content-vertical;
+        gap: 1.8125rem;
+
+        & .search-btn{
+            width: 40px;
+            height: 46px;
+        }
+        & input.search-bar{
+            flex: 1;
+            height: 1.75rem;
+            font-size: 18px;
+            font-weight: 400;
+            outline: none;
+            border: none;
+            background-color: transparent;
+
+            &::placeholder{
+                opacity: 0.6;
+            }
+
+        }
+}
+    // location part
+    .location{
+        width: 292px;
+        max-width: 292px;
+        height: 62px;
+        border-radius: 40px;
+        -webkit-border-radius: 40px;
+        -moz-border-radius: 40px;
+        -ms-border-radius: 40px;
+        -o-border-radius: 40px;
+        @include center-content;
+        background-color: #4CBB17;
+        gap: .25rem;
+
+        & .locationIcon{
+            width: 2.1875rem;
+            height: 2.1875rem;
+            
+        }
+
+        & .locationTitle{
+            color: rgba(255, 255, 255, 0.80);
+            font-size: 1.375rem;
+            font-weight: 800;
+
+
+            
+        }
+}
 }
