i add part of hourly

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,5 +1,6 @@
 // Global variables
-$selection-color: #D9D9D9;
+$selection-color: #D9D9D9; 
+// #444
 $light-text-color: #292929;
 $dark-text-color: #fff;
 $transition: 0.3s;
