--- a/src/styles/component/_weatherDetail.scss
+++ b/src/styles/component/_weatherDetail.scss
@@ -1,9 +1,9 @@
 @import "../base/variables";
 @import "../mixins/mixin";
-main .container{
-    display: flex;
-    justify-content: space-between;
-}
+// main .container{
+//     display: flex;
+//     justify-content: space-between;
+// }
 section.weatherDetail{
     display: flex;
     padding: 20px 25px;
@@ -92,6 +92,7 @@ section.weatherDetail{
             & .icon{
                 width: 3.75rem;
                 height: 3.75rem;
+                margin-bottom: .625rem
             }
             & .Info{
                 @include center-content-vertical;
