--- a/src/styles/mixins/_mixin.scss
+++ b/src/styles/mixins/_mixin.scss
@@ -3,7 +3,8 @@
         background: linear-gradient(113deg, #FFF 0.28%, rgba(70, 97, 115, 0.00) 178.65%);
         color: $light-text-color;
     } @else if $theme == 'dark' {
-        background: linear-gradient(110deg, #383838 0%, rgba(158, 158, 158, 0.00) 71.82%);
+        
+        background: linear-gradient(110deg, #444 0%, #000 100%);
         background-repeat: no-repeat;
         color: $dark-text-color;
     } 
