--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 @import "/src/styles/mixins/_mixin.scss";
 /* layout */
 @import "/src/styles/layout/_header.scss";
+@import "/src/styles/layout/_main.scss";
 /* component */
 @import "/src/styles/component/_dateTime.scss";
 @import "/src/styles/component/_weatherDetail.scss";
+@import "/src/styles/component/_forecast.scss";
+@import "/src/styles/component/_hourlyForecast.scss";
