--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,6 +1,7 @@
 // Global variables
-$selection-color: #D9D9D9; 
+$selection-color: #444; 
 // #444
 $light-text-color: #292929;
 $dark-text-color: #fff;
 $transition: 0.3s;
+$forecast-color: #373636;
