--- a/src/styles/component/_forecast.scss
+++ b/src/styles/component/_forecast.scss
@@ -38,6 +38,7 @@ section.forecast {
                 font-size: 1.5rem;
                 font-weight: 700;
                 gap: .625rem;
+                min-width: 9.8125rem;
             }
             & .forecastDayName{
                 font-size: 1.25rem;
