--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,19 @@
 // Global variables
-$selection-color: #444; 
-// #444
-$light-text-color: #292929;
-$dark-text-color: #fff;
-$transition: 0.3s;
-$forecast-color: #373636;
+:root {
+    --selection-color: #D9D9D9; // #444
+    --text-color: #292929;
+    
+    --transition: 0.3s;
+    --forecast-color: #373636;
+
+    
+}
+
+body.dark {
+    --selection-color: #444;
+    --text-color: #fff;
+    
+    --forecast-color: #373636;
+
+
+}
