--- a/src/styles/component/_dateTime.scss
+++ b/src/styles/component/_dateTime.scss
@@ -9,7 +9,7 @@ section.dateTimeInfo{
     -moz-border-radius: 1.875rem;
     -ms-border-radius: 1.875rem;
     -o-border-radius: 1.875rem;
-    background-color: $selection-color;
+    background-color: var(--selection-color);
     @include box-shadow;
     @include center-content;
     flex-direction: column;
@@ -35,8 +35,4 @@ section.dateTimeInfo{
             font-weight: 400;
         }
     }
-}
-body.light .dateTimeInfo{
-    background-color: #D9D9D9;
-    
 }
