--- a/src/styles/component/_forecast.scss
+++ b/src/styles/component/_forecast.scss
@@ -2,7 +2,7 @@
 @import "../mixins/mixin";
 
 section.forecast {
-    background-color: $selection-color;
+    background-color: var(--forecast-color);
     max-width: 27rem;
     width: 100%;
     border-radius: 1.875rem;
