--- a/src/styles/mixins/_mixin.scss
+++ b/src/styles/mixins/_mixin.scss
@@ -1,14 +1,14 @@
 @mixin theme-background-color($theme) {
     @if $theme == 'light' {
         background: linear-gradient(113deg, #FFF 0.28%, rgba(70, 97, 115, 0.00) 178.65%);
-        color: $light-text-color;
+        color: var(--text-color);
         $selection-color: red !important; 
         
     } @else if $theme == 'dark' {
         
         background: linear-gradient(110deg, #444 0%, #000 100%);
         background-repeat: no-repeat;
-        color: $dark-text-color;
+        color: var(--text-color);
         
     } 
 }
@@ -47,4 +47,16 @@
     } @else if $theme == 'dark' {
         filter: invert(100%);
     }
+}
+// countrys are hidden
+// @mixin hidden {
+//     visibility: hidden;
+//     opacity: 0;
+//     transition: visibility 0s, opacity 0.5s linear;
+// }
+// countrys are visible
+@mixin visible {
+    visibility: visible;
+    opacity: 1;
+    transition: visibility 0s, opacity 0.5s linear;
 }
