--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -268,8 +268,9 @@ header {
         }
 
         .CountryFlag {
-            width: 2rem;
-            height: 2rem;
+            width: 1.8rem;
+            height: 1.5rem;
+            margin-right: .5rem;
         }
     }
 
