--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -106,6 +106,10 @@ header {
         border-radius: 1rem;
         user-select: none;
 
+        @include small{
+            display: none;
+        }
+
         & .dropDounBtn {
             @include center-content-vertical;
             justify-content: space-between;
@@ -294,6 +298,10 @@ header {
         -ms-transition: var(--transition) ease;
         -o-transition: var(--transition) ease;
 
+        @include small{
+            width: 4.9375rem;
+        }
+
         &:hover {
             cursor: pointer;
             background-color: darken(#4CBB17, 5%);
@@ -309,6 +317,9 @@ header {
             color: rgba(255, 255, 255, 0.80);
             font-size: 1.375rem;
             font-weight: 800;
+            @include large{
+                display: none;
+            }
 
 
 
